<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UnirestHummingbird</string>
    <string name="action_settings">Settings</string>
    <string name="nextAnimeButton">Next Anime</string>
    <string name="nextAnimeButtonLoading">Loading</string>
    <string name="startupText">startupText</string>
    <string name="database">Database</string>
    <string name="store">Store</string>
    <string name="title_activity_show_database">ShowDatabaseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="reset">Reset Data</string>
    <string name="added">Added</string>
    <string name="login_title">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_signinButton">Sign in</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="addPlanToWatchMessage">Add anime to Plan to Watch?</string>
    <string name="updateLibraryAlertDialogTitle">Update Library</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

</resources>
