<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:onClick="clickImage"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:text="@string/startupText" />

    <Button
        android:id="@+id/buttonDatabase"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView1"
        android:onClick="startDatabaseActivity"
        android:text="@string/database" />

    <Button
        android:id="@+id/button1"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView1"
        android:onClick="nextAnime"
        android:text="@string/nextAnimeButton" />

        <Button
            android:id="@+id/buttonResetDatabase"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonDatabase"
            android:layout_alignLeft="@+id/buttonDatabase"
            android:onClick="resetDatabase"
            android:text="@string/reset" />

        <Button
            android:id="@+id/buttonStore"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button1"
            android:layout_alignLeft="@+id/button1"
            android:onClick="storeAnime"
            android:text="@string/store" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="TestLogin"
            android:onClick="testLogin"/>

</RelativeLayout>