<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="143dp"
        android:text="@string/login_signinButton"
        android:onClick="authenticate"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/login_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLogin"
        android:layout_alignLeft="@+id/editTextUsername"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

</RelativeLayout>